# MarketDataHavester

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  docker-compose.yaml  pyproject.toml
apps/exchange_rates/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/exchange_rates/management/commands/: fetch_exchange_rates.py
apps/exchange_rates/migrations/: 0001_initial.py
config/: settings.py  urls.py  wsgi.py
docs/: HON-5.md  HON-6.md  HON-7.md
